Lizard/lizardDB/rules.css
@namespace url("http://www.w3.org/1999/xhtml");

:root {
	--general-background-color: #f3f3f3;
	--general-foreground-color: #181818;

	--selected-list-item-background-color: #bbdefb;		/* rgb(255, 192, 192); #83d0f2; */

	--alertive-color: rgb(255, 192, 192);
	--approval-color: rgb(192, 255, 192);

	--flask-img-color: #008000;

	--text-filter-width: 140px;
	--button-filter-width: 30px;

	background-color: var(--general-background-color);
	color: var(--general-foreground-color);
	font-family: Tahoma, Verdana, Segoe, sans-serif;
}

body { min-width: 600px; }


#experimentalWarningBar {
	position: fixed;			/*visibale when scrolling up*/
	/* position: absolute;		hidden when scrolling up */
	top: 0;
	right: 0;
	left: 0;
	line-height: 0;
	border: 0 solid var(--flask-img-color);
	border-top-width: 5px;
}
#experimentalWarningBar > div {
	position: absolute;
	top: 0;
	right: 0;
	background-color: var(--flask-img-color);
	border-bottom-left-radius: 4px;
}
/* flask image is 18x18 */
#experimentalWarningBar img {
	margin: 0 5px 5px 5px;
	filter: brightness(0) invert(1);
}


a[target="_blank"]::after {
	content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==");
	margin: 0 3px 0 5px;
}

ol {
	border-radius: 4px;
	border: 1px solid #000000;
	padding: 0 5px 0 50px;
	overflow-y: scroll;
	overflow-x: auto;
	user-select: none;
	-moz-user-select: none;
	font-family: "Courier New", monospace;
	font-size: 14px;
	line-height: normal;
}
ol > li {
	padding: 2px 0;
	cursor: pointer;
}
ol > li.selected {
	background-color: var(--selected-list-item-background-color);
}
ol > li:focus {
	outline: 1px dotted gray;
	background-color: var(--selected-list-item-background-color);
}
ol > li::marker {
	font-weight: bold;
	color: rgb(201, 0, 0);
}


.listHeaderLine {
	display: flex;
	overflow: auto;
	white-space: nowrap;
}
.listHeaderLine > h3,
.listHeaderLine > h4 {
	margin: 0;
}


.toolbar {
	display: flex;
	margin: auto 0 auto auto;
	font-size: 13.3333px;
	line-height: 17px;
	color: #000000;

	--button-base-bk-color: 5, 5, 6;
	--button-bk-color: rgba(var(--button-base-bk-color), 0.1);
	--button-bk-hover-color: rgba(var(--button-base-bk-color), 0.2);
	--button-bk-active-hover-color: rgba(var(--button-base-bk-color), 0.3);
}

.toolbarButton {
	padding: 3px 12px 2px 12px;
	background-color: var(--button-bk-color);
	border: 1px solid rgb(139, 139, 139);
	border-radius: 2px;
	margin-left: 10px;
	outline-offset: -3px;
}
.toolbarButton:focus {
	outline: 1px dotted gray;
}
.toolbarButton:hover {
	background-color: var(--button-bk-hover-color);
}
.toolbarButton:active:hover {
	color: #ffffff;
	background-color: var(--button-bk-active-hover-color);
}

.textFilter {
	box-sizing: border-box;
	padding: 3px 3px 2px 3px;
	border: 1px solid rgb(139, 139, 139);
	width: var(--text-filter-width);
}
.textFilter:not(:placeholder-shown) {
	background-color: #ffdc9a;
	width: calc(var(--text-filter-width) - var(--button-filter-width));
}

.buttonClearTextFilter {
	display: none;
	width: var(--button-filter-width);
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
	border-left-width: 0;
	margin-left: 0;
	background: var(--button-bk-color) url("../icons/filter-clear.png") no-repeat center/50%;
}
.textFilter:not(:placeholder-shown) + .buttonClearTextFilter {
	display: block;
}

.dangerous:hover {
	background-color: var(--alertive-color);
}

#urlsList {
	height: 230px;
	overflow-x: hidden;
}

#anchorURL {
	text-decoration-line: none;
	white-space: nowrap;
}
#anchorURL:hover { text-decoration-line: underline; }
#anchorURL:empty { display: none; }

/*************************************************************************************/
/*************************************************************************************/

#urlRuleContainer {
	display: flex;
	justify-content: space-around;
}
#urlRuleContainer > div:not(#verticalBarDelimiter) {
	flex-basis: 46%;
}

#verticalBarDelimiter {
	background-color: var(--general-foreground-color);
	min-width: 2px;
	max-width: 2px;
	margin: 30px 8px 30px 8px;
}

#selectorsList {
	height: 400px;
	margin: 14px 0;
}

#ruleDetails {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	border-radius: 4px 4px 0 0;
	border: 1px solid #000000;
	height: 400px;
	margin: 14px 0;
}

#ruleProperties {
	display: flex;
	justify-content: space-between;
	box-sizing: border-box;
	min-height: 22px;
	padding: 3px 6px;
	font-size: 13.3333px;
}

#textRuleDetails {
	flex-grow: 1;
	box-sizing: border-box;
	width: 100%;
	border: 0 solid rgb(139, 139, 139);
	border-top-width: 1px;
	margin: 0;
	padding: 2px;
	resize: none;
	line-height: 21px;
	white-space: pre;
}
#textRuleDetails.editError {
	box-shadow: 0 0 4px 2px red;
}
#textRuleDetails.editValid {
	box-shadow: 0 0 4px 2px green;
}

.actionNotifyOverlayParent {
	position: relative;
}

.actionNotifyOverlay {
	display: flex;
	justify-content: center;
	align-items: center;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	opacity: 0;
	color: green;
	font-size: 9vw;
	user-select: none;
	-moz-user-select: none;
	pointer-events: none;
	transition: opacity 400ms ease-in-out;
}

